--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,15 @@
+*{
+  margin: 0;
+  padding: 0;
+}
+
+.container-fluid, .container, .grid, .row {
+  padding: 0;
+  margin: 0;
+}
+
 .App {
+  max-width: 100%;
   text-align: center;
 }
 
@@ -20,3 +31,4 @@
 .App-link {
   color: #09d3ac;
 }
+
