adjusted scss to variable.scss

--- a/src/assets/variables.scss
+++ b/src/assets/variables.scss
@@ -1,8 +1,9 @@
 // Q-Wiki Color Pallet
-
+$black: #000000;
+$white: #FFFFFF;
 $qwikiLightBlue: #509E9E;
-
 $qwikiDarkBlue: #024040;
 $qwikiGreen: #E9EDDE;
 $qwikiOrange: #B79123;
 $qwikiGrey: #ccc;
+$qwikiDarkRed: #7D2F0E;
