--- a/src/components/atoms/Heading/heading.scss
+++ b/src/components/atoms/Heading/heading.scss
@@ -1,3 +1,6 @@
+@import "../../../../src/assets/variables.scss";
+
+
 .double-underline-container{
   display:flex;
   flex-direction: column;
@@ -5,7 +8,7 @@
   .double-underline-thick{
     align-self: center;
     padding-top: 6px;
-    border-bottom: 3px solid #E9EDDE;
+    border-bottom: 3px solid $qwikiGreen;
     width: 85px;
   }
 
@@ -13,7 +16,7 @@
     align-self: center;
     margin: 0px;
     padding-top: 5px;
-    border-bottom: 2px solid #E9EDDE;
+    border-bottom: 2px solid $qwikiGreen;
     width: 53px;
   }
 }
