fixed colors in components

--- a/src/assets/variables.scss
+++ b/src/assets/variables.scss
@@ -7,3 +7,15 @@ $qwikiGreen: #E9EDDE;
 $qwikiOrange: #B79123;
 $qwikiGrey: #ccc;
 $qwikiDarkRed: #7D2F0E;
+
+
+:export {
+  black: $black;
+  white: $white;
+  qwikiLightBlue: $qwikiLightBlue;
+  qwikiDarkBlue: $qwikiDarkBlue;
+  qwikiGreen: $qwikiGreen;
+  qwikiOrange: $qwikiOrange;
+  qwikiGrey: $qwikiGrey;
+  qwikiDarkRed: $qwikiDarkRed;
+}
