added tabs component

--- a/src/assets/variables.scss
+++ b/src/assets/variables.scss
@@ -2,6 +2,7 @@
 $black: #000000;
 $white: #FFFFFF;
 $qwikiLightBlue: #509E9E;
+$qwikiMiddleBlue: #91c2c2;
 $qwikiDarkBlue: #024040;
 $qwikiGreen: #E9EDDE;
 $qwikiOrange: #B79123;
