--- a/src/components/molecules/Card/card.scss
+++ b/src/components/molecules/Card/card.scss
@@ -1,5 +1,8 @@
 @import "../../../../src/assets/variables.scss";
 
+a {
+    text-decoration: none;
+}
 .card-container{
   width: 160px;
   height: 248px;
@@ -14,6 +17,7 @@
   transition: all 0.3s cubic-bezier(.25,.8,.25,1);
   -webkit-transform: scale(1, 1);
   transform: scale(1, 1);
+
 
 p {
   padding-top: 8px;
