--- a/src/components/atoms/Dropdown/dropdown.scss
+++ b/src/components/atoms/Dropdown/dropdown.scss
@@ -26,8 +26,7 @@ select::-ms-expand {
 }
 
 .dropdown {
-  float: left;
-  width: 30rem;
+  width: 100%;
   margin: 20px 0 0 0;
 
   position: relative;
