--- a/src/components/atoms/Button/button.scss
+++ b/src/components/atoms/Button/button.scss
@@ -76,6 +76,12 @@
   padding: 1em 2em;
   letter-spacing: 0.05rem;
 
+  &.is-small {
+    padding: 0.6em 0.9em;
+    font-weight: 500;
+    font-size: 1rem;
+  }
+
   &.has-icon span {
     // this centers the icon vertically
     vertical-align: -15%;
