added padding to q-wiki info section

--- a/src/components/organisms/LandingPage/landingPage.scss
+++ b/src/components/organisms/LandingPage/landingPage.scss
@@ -5,6 +5,10 @@
       padding: 10px;
 }
 
+.qwiki_info-container {
+
+  padding-bottom: 60px;
+}
 .qwiki_info-img-container, .qwiki_info-text-container {
 flex:  1 ;
 }
