fixed footer, now always at bottom of the page

--- a/src/components/atoms/ContainerFullPage/containerFullPage.scss
+++ b/src/components/atoms/ContainerFullPage/containerFullPage.scss
@@ -1,3 +1,10 @@
 .row{
   //background-image: linear-gradient(rgba(3, 93, 93, 0.75), rgba(3, 93, 93, 0.75)), url("qwiki.png");
 }
+
+
+
+.page-container {
+  position: relative;
+  min-height: 100vh;
+}
