--- a/src/components/organisms/LandingPage/landingPage.scss
+++ b/src/components/organisms/LandingPage/landingPage.scss
@@ -58,7 +58,7 @@ flex:  1 ;
 }
 
 .numberDisplay {
-  height: 10%;
+  height: 280px;
   background: linear-gradient(to bottom, rgba(3, 93 ,93, 0.75), rgba(3, 93 ,93, 0.75)), url("../../../../src/assets/images/slide-1.jpg");
   background-repeat: no-repeat;
   background-size: cover;
