--- a/src/assets/variables.scss
+++ b/src/assets/variables.scss
@@ -9,6 +9,7 @@ $qwikiGreenDarker: #cfd7b9;
 $qwikiOrange: #B79123;
 $qwikiGrey: #ccc;
 $qwikiDarkRed: #7D2F0E;
+$qwikiDarkGray: #C7C7C7;
 
 
 :export {
@@ -22,4 +23,5 @@ $qwikiDarkRed: #7D2F0E;
   qwikiOrange: $qwikiOrange;
   qwikiGrey: $qwikiGrey;
   qwikiDarkRed: $qwikiDarkRed;
+  qwikiDarkGray:$qwikiDarkGray;
 }
