Finished v1 of Minigames, fully funtional, need backend or other connection

--- a/src/assets/variables.scss
+++ b/src/assets/variables.scss
@@ -9,6 +9,8 @@ $qwikiGreenDarker: #cfd7b9;
 $qwikiOrange: #B79123;
 $qwikiGrey: #ccc;
 $qwikiDarkRed: #7D2F0E;
+$qwikiFalseRed: #cd5c5c;
+$qwikiCorrectGreen: #3cb371;
 
 
 :export {
