--- a/src/components/organisms/AboutPage/aboutPage.scss
+++ b/src/components/organisms/AboutPage/aboutPage.scss
@@ -17,23 +17,62 @@
   }
 }
 
+.timeline-master-container {
+  display: flex;
+flex-direction: column;
+
+.timeline-first-container, .timeline-second-container {
+  display: flex;
+flex-direction: row;
+}
+
+.timeline-first-container {
+
+  .timeline-img-container {
+    display: flex;
+    align-items: flex-end;
+    flex: 1;
+    justify-content: flex-end;
+  }
+
+}
+}
+
+
+.timeline-img {
+  width: 100%;
+}
+
+
+.blubb {
+  /*display: flex;
+  flex-direction: column;
+  align-items: flex-end;*/
+}
+
+
 
 .timeline-container {
   position: relative;
-  width: 50%;
+  flex: 1;
+  //display: flex;
+  //flex-direction: column;
+  //align-items: flex-end;
+
+
 
 .timeline-content-container {
-  padding: 10px 40px;
+padding: 10px 0px 10px 40px;
 position: relative;
 background-color: inherit;
-width: 50%;
+width: 90%;
 }
 
 .timeline-content-container::after {
   content: '';
   position: absolute;
-  width: 31px;
-  height: 31px;
+  width: 35px;
+  height: 35px;
   right: -17px;
   background-color: $qwikiGreen;
   top: 15px;
@@ -45,8 +84,12 @@ width: 50%;
   left: 0;
 }
 
+.left::after {
+  right: -32px;
+}
+
 .right {
-  left: 50%;
+  //left: 50%;
 }
 
 .right::after {
@@ -60,13 +103,40 @@ width: 50%;
 }
 }
 
-.timeline-container::after {
+.timeline-container:after {
   content: '';
   position: absolute;
   width: 6px;
-  background-color: white;
+  background-color: $qwikiGreen;
   top: 0;
   bottom: 0;
-  left: 50%;
   margin-left: -3px;
+}
+
+
+.timeline-second-container {
+
+.timeline-img-container {
+  .timeline-img-container {
+    display: flex;
+    align-items: flex-start;
+    flex: 1;
+    justify-content: flex-end;
+  }
+}
+}
+@media only screen and (max-width: 768px){
+
+  .timeline-container {
+    padding: 20px;
+
+
+  }
+  .timeline-first-container{
+  flex-direction: column !important;
+    .col-md-2 {
+    flex-basis: 0 !important;
+    flex: initial !important;
+    }
+  }
 }
