--- a/src/components/molecules/CardMember/cardMember.scss
+++ b/src/components/molecules/CardMember/cardMember.scss
@@ -22,6 +22,14 @@
   .cardMember_container_content {
     padding: 10px;
     opacity: 0;
+    h2 {
+      text-align: left;
+    }
+
+    p {
+      display: block !important;
+      padding: 10px 0px 0px 0px;
+    }
 
     .double-underline-thick {
       align-self: flex-start;
@@ -37,9 +45,15 @@
   }
 }
 
-
 .cardMember_container:hover {
 
+  .cardMember_container_content {
+    opacity: 1;
+  }
+}
+
+/* smartphones, touchscreens */
+@media (hover: none) and (pointer: coarse) {
   .cardMember_container_content {
     opacity: 1;
   }
