Added query results to minigame

--- a/src/components/atoms/Accordion/accordion.scss
+++ b/src/components/atoms/Accordion/accordion.scss
@@ -24,6 +24,10 @@ float:right;
   border-bottom: 1px solid $qwikiGrey;
 }
 
-.accordion__button:hover, .accordion__button:focus{
+.accordion__button:hover, .accordion__button:focus, .accordion__button[aria-expanded="true"]{
   background-color: $qwikiGreenDarker;
+}
+
+.accordion__panel{
+  background-color: white;
 }
