--- a/src/components/organisms/ImplementedQueriesPage/implementedQueriesPage.scss
+++ b/src/components/organisms/ImplementedQueriesPage/implementedQueriesPage.scss
@@ -1,5 +1,12 @@
 @import "../../../../src/assets/variables.scss";
 
+.implemented-queries{
+  background-color: $qwikiLightBlue;
+
+  .filter, .accordion-container {
+    background-color: $qwikiGreen;
+  }
+
 .implemented-queries-header{
   height: 280px;
   background: linear-gradient(to bottom, rgba(3, 93 ,93, 0.75), rgba(3, 93 ,93, 0.75)), url("../../../../src/assets/images/slide-1.jpg");
@@ -11,4 +18,19 @@
   justify-content: center;
   align-items: center;
   align-content: center;
+}
+  .dropdown-container{
+    display: flex;
+    justify-content: space-around;
+    margin: 1em 0 2em 0;
+    div{
+      width: 45%;
+    }
+  }
+
+  .minigame-div{
+    .minigame_container{
+      margin:auto;
+    }
+  }
 }
