--- a/src/components/atoms/Accordion/accordion.scss
+++ b/src/components/atoms/Accordion/accordion.scss
@@ -27,3 +27,10 @@ float:right;
 .accordion__button:hover, .accordion__button:focus{
   background-color: $qwikiGreenDarker;
 }
+
+
+@media only screen and (max-width: 516px) {
+ .tab {
+    border-right-width: 0px;
+ }
+}
