--- a/src/components/atoms/TextField/textField.scss
+++ b/src/components/atoms/TextField/textField.scss
@@ -11,6 +11,7 @@ input[type="text"] {
   width: 100%;
   box-sizing: border-box;
   letter-spacing: 1px;
+      z-index: 2;
 }
 
 :focus {
@@ -106,11 +107,10 @@ input[type="text"] {
   .effect-20 ~ label {
     position: absolute;
     left: 14px;
-    width: 100%;
     top: 10px;
-    color: $qwikiGrey;
+    color: $qwikiDarkGray;
     transition: 0.3s;
-    z-index: -1;
+    z-index: 1;
     letter-spacing: 0.5px;
   }
 
