--- a/src/components/molecules/Minigame/minigame.scss
+++ b/src/components/molecules/Minigame/minigame.scss
@@ -26,7 +26,7 @@
       padding: 0.5rem;
       margin-bottom: 0.6rem;
     }
-    .sorting_number{
+    .sorting_number, .result_number{
       padding: 2px;
       p {
         background-color: $white;
@@ -37,6 +37,10 @@
         border-radius: 100px;
         border: 1px solid $black;
       }
+    }
+    .result_number > p {
+      border: 1px solid $qwikiGreenDarker;
+      color: $qwikiGreenDarker;
     }
   }
   .minigame_button{
