--- a/src/components/atoms/TimeLineItem/timeLineItem.scss
+++ b/src/components/atoms/TimeLineItem/timeLineItem.scss
@@ -8,11 +8,11 @@
 }
 
 .p_left {
-  padding-left: 35px;
+  //padding-left: 35px;
 }
 
 .p_right{
-  padding-right: 35px;
+  //padding-right: 35px;
 }
 
 
