--- a/src/components/organisms/SparqlPage/sparqlPage.scss
+++ b/src/components/organisms/SparqlPage/sparqlPage.scss
@@ -1,14 +1,28 @@
 @import "../../../../src/assets/variables.scss";
 
-.contribute-header {
-  height: 280px;
-  background: linear-gradient(to bottom, rgba(3, 93 ,93, 0.75), rgba(3, 93 ,93, 0.75)), url("../../../../src/assets/images/slide-1.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  align-content: center;
+.contribute-container {
+  .contribute-header {
+    height: 280px;
+    background: linear-gradient(to bottom, rgba(3, 93 ,93, 0.75), rgba(3, 93 ,93, 0.75)), url("../../../../src/assets/images/slide-1.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+  }
+
+  .contribute-content {
+
+
+    .contribute_cards-container{
+
+      .contribute-cards {
+        margin: 40px 0px 40px 0px;
+        padding: 10px;
+      }
+    }
+  }
 }
