--- a/src/components/atoms/Button/button.scss
+++ b/src/components/atoms/Button/button.scss
@@ -86,4 +86,12 @@
     // this centers the icon vertically
     vertical-align: -15%;
   }
+
+
+}
+
+@media only screen and (max-width: 600px) {
+  .btn {
+    padding: 0.5rem 0.5rem;
+  }
 }
