--- a/src/components/atoms/Dropdown/dropdown.scss
+++ b/src/components/atoms/Dropdown/dropdown.scss
@@ -137,6 +137,11 @@ select::-ms-expand {
     color: $qwikiLightBlue;
     transition: 0.3s;
   }
+  .clear-filter{
+    position: absolute;
+    right: -15px;
+    top: 13px;
+  }
 
 }
 
