--- a/src/components/molecules/Minigame/minigame.scss
+++ b/src/components/molecules/Minigame/minigame.scss
@@ -4,7 +4,7 @@
   background-size: cover;
   position: relative;
   text-align: center;
-  width: 40rem;
+  width: 100%rem;
   height: 20rem;
   display: flex;
   align-items: center;
@@ -39,11 +39,69 @@
       }
     }
     .result_number > p {
-      border: 1px solid $qwikiGreenDarker;
-      color: $qwikiGreenDarker;
+      border: 1px solid $qwikiCorrectGreen;
+      color: $qwikiCorrectGreen;
     }
   }
+  .image_overlay{
+    background-color: rgba(2, 64, 64, 0.8);
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 2;
+
+    div{
+    }
+    .license-links{
+      div{
+        display: inline-block;
+      }
+      color: $white;
+      a{
+        color: $white;
+        text-decoration: underline;
+      }
+      width: auto;
+      height: auto;
+    }
+
+    &.visible{
+      display:block;
+    }
+
+    &.invisible{
+      display:none;
+    }
+
+    .close_button{
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      color: $white;
+    }
+
+    img{
+      margin-top: 2rem;
+      height: 70%;
+      width: 70%;
+      object-fit: contain;
+    }
+  }
+
   .minigame_button{
     margin-top: 1rem;
+    align-items: center;
+    .draw-border{
+      color: $white;
+      &:hover{
+        &::before, &::after{
+          border-color: $qwikiOrange;
+        }
+      }
+    }
   }
 }
