--- a/src/components/molecules/NumberDisplay/numberDisplay.scss
+++ b/src/components/molecules/NumberDisplay/numberDisplay.scss
@@ -5,10 +5,15 @@ display:flex;
 padding: 10px;
 box-sizing: border-box;
 width: 25%
+
+
+
+
 }
 
 .numberDisplay-content {
   padding: 10px;
+  width: 80px;
 }
 
 .numberDisplay-container:nth-child(1) {
