--- a/src/components/molecules/Slideshow/slideshow.scss
+++ b/src/components/molecules/Slideshow/slideshow.scss
@@ -23,3 +23,10 @@
 .control-prev {
     margin-left: 20px;
 }
+
+.cropped1 {
+
+    height: 690px; /* height of container */
+    object-fit: cover;
+    border: 5px solid black;
+}
