--- a/src/components/molecules/Minigame/minigame.scss
+++ b/src/components/molecules/Minigame/minigame.scss
@@ -181,3 +181,14 @@
 .loading-container{
   display: flex;
 }
+
+
+
+@media only screen and (max-width:1126px) {
+.minigame_content {
+  .center-xs {
+    justify-content: space-between;
+  }
+}
+
+}
