--- a/src/components/organisms/LandingPage/landingPage.scss
+++ b/src/components/organisms/LandingPage/landingPage.scss
@@ -1,21 +1,20 @@
 @import "../../../../src/assets/variables.scss";
 
-.landingpage{
-
+.landingpage {
   .landingpage_cards {
-    margin: 40px 0px 40px 0px;
+    margin: 20px 0px 20px 0px;
     padding: 10px;
   }
 
   .qwiki_info-container {
-
     padding-bottom: 60px;
   }
-  .qwiki_info-img-container, .qwiki_info-text-container {
-    flex:  1 ;
+  .qwiki_info-img-container,
+  .qwiki_info-text-container {
+    flex: 1;
   }
 
-  .qwiki_info-text-container_content{
+  .qwiki_info-text-container_content {
     padding-left: 35px;
     padding-right: 35px;
     width: 60%;
@@ -27,17 +26,18 @@
 
   .empty-space {
     height: 10px;
-    width:100%; clear:both;
+    width: 100%;
+    clear: both;
   }
 
-  .qwiki_info-heading{
+  .qwiki_info-heading {
     display: flex;
     padding-top: 10px;
 
-    div:nth-child(2){
+    div:nth-child(2) {
       h2 {
         font-size: 36px;
-        background-image:linear-gradient($qwikiOrange,$qwikiLightBlue);
+        background-image: linear-gradient($qwikiOrange, $qwikiLightBlue);
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
         position: relative;
@@ -61,7 +61,12 @@
 
   .numberDisplay {
     height: 280px;
-    background: linear-gradient(to bottom, rgba(3, 93 ,93, 0.75), rgba(3, 93 ,93, 0.75)), url("../../../../src/assets/images/slide-1.jpg");
+    background: linear-gradient(
+        to bottom,
+        rgba(3, 93, 93, 0.75),
+        rgba(3, 93, 93, 0.75)
+      ),
+      url("../../../../src/assets/images/slide-1.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -70,42 +75,41 @@
       height: 100% !important;
       align-items: center;
     }
-
   }
 
   .wikidata-container {
-
-
-    .minigame_container{
-      height:300px;
+    .minigame_container {
+      height: 300px;
     }
   }
 
-  .activities-container{
+  .activities-container {
     background-color: $qwikiGreen;
+
 
     h2 {
       text-align: right;
-         }
+    }
   }
 
-  .activities-container, .wikidata-container {
+  .activities-container,
+  .wikidata-container {
     flex: 1;
     padding-top: 30px;
     padding-right: 30px;
     padding-bottom: 30px;
 
+
     h2 {
       padding-bottom: 10px;
     }
 
-    .recently-reported-problems-container{
-
+    .recently-reported-problems-container {
       .recently-reported-problems-content {
         background-color: $qwikiDarkGray;
         display: flex;
 
-        span{
+        span {
           padding: 15px;
 
           path {
@@ -116,24 +120,59 @@
           flex: 1;
         }
       }
-
     }
 
-
-    .latest-query-container, .recently-reported-problems-container {
+    .latest-query-container,
+    .recently-reported-problems-container {
       padding-top: 15px;
     }
   }
 
   .wikidata-container {
-
     padding-left: 30px;
-
   }
 
   @media only screen and (max-width: 508px) {
     .numberDisplay {
       height: auto;
+    }
+  }
+
+  @media only screen and (max-width: 396px) {
+    .landingpage_cards-container {
+      .card-container {
+        span {
+          height: 72px;
+        }
+        width: 140px;
+        height: 228px;
+        padding: 2px 15px 2px 15px;
+      }
+    }
+  }
+
+  @media only screen and (max-width: 320px) {
+    .landingpage_cards-container {
+      .card-container {
+        span {
+          height: 52px;
+        }
+        width: 120px;
+        height: 208px;
+      }
+    }
+  }
+
+  @media only screen and (max-width: 345px) {
+    .wikidata-container, .activities-container {
+      width: 100%;
+    }
+  }
+
+  @media only screen and (max-width: 376px) {
+    .qwiki_info-text-container_content {
+      padding-left: 15px;
+      padding-right: 15px;
     }
   }
 
@@ -144,21 +183,25 @@
       width: 100% !important;
     }
 
-    .qwiki_info-text-container_content{
+    .qwiki_info-text-container_content {
       width: auto;
     }
   }
 
   @media only screen and (max-width: 872px) {
+    .landingpage_cards {
+      box-sizing: border-box;
+      width: 50%;
+      display: flex;
+      justify-content: center;
+    }
 
-
-    .landingpage_cards-container, .numberDisplay  {
-
-      .between-xs{
+    .landingpage_cards-container,
+    .numberDisplay {
+      .between-xs {
         justify-content: center;
       }
     }
-
   }
 
   @media only screen and (max-width: 662px) {
@@ -169,7 +212,50 @@
       .row {
         flex-direction: column;
       }
+    }
+  }
 
+  @media only screen and (max-width: 375px) {
+    .activities-container{
+      padding-right: 0px;
     }
 
-  }}
+    .wikidata-container{
+    padding-left: 0px;
+      padding-right: 0px;
+
+      h2 {
+        padding-left: 30px;
+        padding-right: 30px;
+      }
+    }
+  }
+
+
+
+  @media only screen and (max-width: 879px) {
+    .activities-minigame-container {
+      .activities-container {
+        h2 {
+          text-align: left;
+          padding-left: 30px;
+          padding-right: 30px;
+        }
+      }
+
+      .row:nth-child(1) {
+        flex-direction: column;
+      }
+
+      .minigame_content {
+        .center-xs {
+          justify-content: center;
+        }
+      }
+
+      .minigame_question {
+        max-width: 100% !important;
+      }
+    }
+  }
+}
