--- a/src/components/atoms/Accordion/accordion.scss
+++ b/src/components/atoms/Accordion/accordion.scss
@@ -24,13 +24,11 @@ float:right;
   border-bottom: 1px solid $qwikiGrey;
 }
 
-.accordion__button:hover, .accordion__button:focus, .accordion__button[aria-expanded="true"]{
+.accordion__button:hover, .accordion__button:focus{
   background-color: $qwikiGreenDarker;
 }
 
-.accordion__panel {
-  background-color: white;
-}
+
 @media only screen and (max-width: 516px) {
  .tab {
     border-right-width: 0px;
