--- a/src/components/molecules/NumberDisplay/numberDisplay.scss
+++ b/src/components/molecules/NumberDisplay/numberDisplay.scss
@@ -1,13 +1,19 @@
 @import "../../../../src/assets/variables.scss";
 
 .numberDisplay-container {
-  display:flex;
+display:flex;
 padding: 10px;
-width: 218px;
+box-sizing: border-box;
+width: 25%
+
+
+
+
 }
 
 .numberDisplay-content {
   padding: 10px;
+  width: 80px;
 }
 
 .numberDisplay-container:nth-child(1) {
@@ -16,4 +22,13 @@ width: 218px;
     margin-left: -14px;
   }
 
+}
+
+
+
+@media only screen and (max-width: 900px) {
+.numberDisplay-container {
+    flex: 0 50%;
+    justify-content: center;
+}
 }
