some styling changes, changed screenshots

--- a/src/components/molecules/Minigame/minigame.scss
+++ b/src/components/molecules/Minigame/minigame.scss
@@ -1,6 +1,6 @@
 @import "../../../../src/assets/variables.scss";
 .minigame_container{
-  background-image: linear-gradient(0deg, rgba(2, 64, 64, 0.7), rgba(2, 64, 64, 0.7)), url("../../../../src/assets/images/background.jpg");
+  background-image: linear-gradient(0deg, rgba(2, 64, 64, 0.7), rgba(2, 64, 64, 0.7)), url("../../../../src/assets/images/screen10.png");
   background-size: cover;
   position: relative;
   text-align: center;
