--- a/src/components/organisms/LandingPage/landingPage.scss
+++ b/src/components/organisms/LandingPage/landingPage.scss
@@ -66,7 +66,7 @@
         rgba(3, 93, 93, 0.75),
         rgba(3, 93, 93, 0.75)
       ),
-      url("../../../../src/assets/images/slide-1.jpg");
+      url("../../../../src/assets/images/screen10.png");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
