--- a/src/components/organisms/SparqlPage/sparqlPage.scss
+++ b/src/components/organisms/SparqlPage/sparqlPage.scss
@@ -3,7 +3,7 @@
 .contribute-container {
   .contribute-header {
     height: 280px;
-    background: linear-gradient(to bottom, rgba(3, 93 ,93, 0.75), rgba(3, 93 ,93, 0.75)), url("../../../../src/assets/images/slide-1.jpg");
+    background: linear-gradient(to bottom, rgba(3, 93 ,93, 0.75), rgba(3, 93 ,93, 0.75)), url("../../../../src/assets/images/screen10.png");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
