added two new member images, fixed header color and responsiveness, changed orange color

--- a/src/components/organisms/ImplementedQueriesPage/implementedQueriesPage.scss
+++ b/src/components/organisms/ImplementedQueriesPage/implementedQueriesPage.scss
@@ -26,6 +26,16 @@
   h2{
     color: $qwikiOrange;
   }
+
+  .implemented-queries-header-container {
+    padding: 20px;
+    text-align: center;
+
+    h2, p {
+      padding: 10px;
+      text-align: center;
+    }
+  }
 }
   .dropdown-container{
     display: flex;
