--- a/src/assets/variables.scss
+++ b/src/assets/variables.scss
@@ -6,7 +6,7 @@ $qwikiMiddleBlue: #91c2c2;
 $qwikiDarkBlue: #024040;
 $qwikiGreen: #E9EDDE;
 $qwikiGreenDarker: #cfd7b9;
-$qwikiOrange: #B79123;
+$qwikiOrange: #d88900;
 $qwikiGrey: #ccc;
 $qwikiDarkRed: #7D2F0E;
 $qwikiDarkGray: #C7C7C7;
