added favicon, fixed responsiveness in reportPage

--- a/src/assets/variables.scss
+++ b/src/assets/variables.scss
@@ -1,6 +1,7 @@
 // Q-Wiki Color Pallet
 $black: #000000;
 $white: #FFFFFF;
+$qwikiVeryLightBlue: #79b4b4;
 $qwikiLightBlue: #509E9E;
 $qwikiMiddleBlue: #91c2c2;
 $qwikiDarkBlue: #024040;
@@ -12,7 +13,6 @@ $qwikiDarkRed: #7D2F0E;
 $qwikiDarkGray: #C7C7C7;
 $qwikiFalseRed: #cd5c5c;
 $qwikiCorrectGreen: #3cb371;
-
 
 :export {
   black: $black;
