--- a/src/components/molecules/Footer/footer.scss
+++ b/src/components/molecules/Footer/footer.scss
@@ -20,3 +20,13 @@
     text-decoration: underline;
   }
 }
+
+
+
+@media only screen and (max-width: 514px) {
+
+.footer-container{
+  padding: 9px 0 32px 0;
+}
+
+}
