--- a/src/components/organisms/ImplementedQueriesPage/implementedQueriesPage.scss
+++ b/src/components/organisms/ImplementedQueriesPage/implementedQueriesPage.scss
@@ -1,7 +1,7 @@
 @import "../../../../src/assets/variables.scss";
 
 .implemented-queries{
-  background-color: $qwikiLightBlue;
+  background-color: $qwikiVeryLightBlue;
 
   .filter, .accordion-container {
     background-color: $qwikiGreen;
