--- a/src/components/molecules/Minigame/minigame.scss
+++ b/src/components/molecules/Minigame/minigame.scss
@@ -4,7 +4,8 @@
   background-size: cover;
   position: relative;
   text-align: center;
-  width: 100%rem;
+  width: 100%;
+  max-width: 50rem;
   height: 20rem;
   display: flex;
   align-items: center;
@@ -187,8 +188,15 @@
 @media only screen and (max-width:1126px) {
 .minigame_content {
   .center-xs {
-    justify-content: space-between;
+    justify-content: center;
   }
+}
+
+}
+
+@media only screen and (max-width:700px) {
+.minigame_container {
+  width: 100%;
 }
 
 }
