--- a/src/components/organisms/ImplementedQueriesPage/implementedQueriesPage.scss
+++ b/src/components/organisms/ImplementedQueriesPage/implementedQueriesPage.scss
@@ -143,7 +143,10 @@
   .dropdown-container{
     flex-wrap: wrap;
   }
-  .implemented-queries .dropdown-container dropdown{
-    width: 70%;
+  .dropdown-container {
+    .dropdown.input-effect{
+      width: 100%;
+      margin-right: 1.5rem;
+    }
   }
 }
