fixed privacy policy, changed contacs to legal notice, fixed responsiveness in tutorial page

--- a/src/components/organisms/LandingPage/landingPage.scss
+++ b/src/components/organisms/LandingPage/landingPage.scss
@@ -232,6 +232,17 @@
   }
 
 
+  @media only screen and (max-width:1126px) {
+    .activities-minigame-container{
+  .minigame_content {
+    .center-xs {
+      justify-content: space-between;
+    }
+  }
+  }
+}
+  
+
 
   @media only screen and (max-width: 879px) {
     .activities-minigame-container {
