--- a/src/components/organisms/AddingQuestionsPage/AddingQuestionsPage.scss
+++ b/src/components/organisms/AddingQuestionsPage/AddingQuestionsPage.scss
@@ -40,8 +40,18 @@
     .tutorial-text {
       padding-top: 15px;
     }
+    .tutorial-text-code-container {
 
-    .tutorial-table-container {
+      display: flex;
+      flex-direction: column;
+
+    }
+
+    .tutorial-text-container {
+      padding-top: 20px;
+    }
+
+    .tutorial-table-container, .adding-questions-page--sparql-results {
       padding-top: 15px;
 
       th, td {
@@ -49,5 +59,6 @@
       }
 
     }
+
   }
 }
