--- a/src/components/organisms/CreateNewQueriesPage/createNewQueriesPage.scss
+++ b/src/components/organisms/CreateNewQueriesPage/createNewQueriesPage.scss
@@ -187,9 +187,9 @@
   }
 
   .dropdown-container {
-    .dropdown.input-effect{
+    .dropdown{
       width: 100%;
-      margin-right: 1.5rem;
-    }
+}
+
   }
 }
