--- a/src/components/molecules/Minigame/minigame.scss
+++ b/src/components/molecules/Minigame/minigame.scss
@@ -179,10 +179,21 @@
   }
 }
 
-.loading-container{
-  display: flex;
-}
 
+.pre-load-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    .loading-container{
+      display: flex;
+    }
+    .error-container{
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+    }
+  }
 
 
 @media only screen and (max-width:1126px) {
